fix(widgets): contact on token page

--- a/app/widgets/contacts/Contacts.module.scss
+++ b/app/widgets/contacts/Contacts.module.scss
@@ -12,6 +12,7 @@
     width: fit-content;
     margin-bottom: 16px;
     flex-wrap: wrap;
+    margin-top: 10px;
 
     .contactBlock{
       display: flex;
